# mafbase-app

./: .cursorrules  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  analysis_options.yaml  codemagic.yaml  deploy.sh  firebase.json  flutter_launcher_icons.yaml  flutter_native_splash.yaml  nginx.conf  pubspec.yaml  rustore-api-key-gen.py
.claude/agents/: designer.md
.claude/memory/: feedback_no_interactor_wrapper.md
.codex/environments/: environment.toml
.github/scripts/: claude_doctor.py
.github/workflows/: android-deploy.yml  build-deploy.yml  ci-tests.yml  claude-code-review.yml  claude-doctor.yml  claude.yml  ios-deploy.yml  stage-deploy.yml  update-goldens.yml
.run/: profile.run.xml
android/app/: build.gradle  google-services.json
docs/: tournament-user-flows.md
integration_test/: app.dart  app_test.dart
ios/: ExportOptions.plist  Podfile  PrivacyInfo.xcprivacy
ios/Runner/: GoogleService-Info.plist  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  ExportOptions.plist  Fastfile  Matchfile
lib/: firebase_options.dart  main.dart  utils.dart
lib/app/: assembly.dart  assets.dart  bloc_observer.dart  get_it_register.dart  router.dart  router.gr.dart
lib/common/: bloc_extension.dart
lib/data/: base_repository.dart  base_request.dart  base_socket.dart  http_client.dart
lib/domain/: base_interactor.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_ru.arb
lib/seating-generator-proto/: mafia.pb.dart  mafia.pbenum.dart  mafia.pbjson.dart  mafia.pbserver.dart
lib/utils/: splash_manager.dart  widget_extensions.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: GoogleService-Info.plist
macos/Runner.xcodeproj/: project.pbxproj
mafbase_stream/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
mafbase_stream/android/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro  settings.gradle  settings.gradle.kts
mafbase_stream/android/src/main/: AndroidManifest.xml
mafbase_stream/android/src/main/cpp/: jni_bridge.cpp
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/: AspectRatioFrameLayout.kt  MafbaseStreamPlugin.kt  OverlayPreviewActivity.kt  PhaseGate.kt  StreamActivity.kt  StreamSession.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/data/sockets/: ClubContentSocket.kt  TournamentContentSocket.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/encoder/: AudioEncoder.kt  AudioPipeline.kt  Mp4Recorder.kt  VideoEncoder.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/events/: StreamEventBus.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/gl/: Compositor.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/jni/: StreamSessionNative.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/overlay/: BrandImageLayer.kt  OverlayCatalog.kt  OverlayComposeContainer.kt  OverlayDebugTarget.kt  OverlayInvalidator.kt  OverlayParams.kt  OverlayViewRenderer.kt
mafbase_stream/android/src/main/kotlin/com/example/mafbase_stream/overlay/plashki/: MafbaseCard.kt  MafbaseContent.kt  PlashkiMafbaseOverlay.kt
mafbase_stream/android/src/main/res/drawable/: role_don.xml  role_mafia.xml  role_sheriff.xml  status_deleted.xml  status_killed.xml  status_voted.xml
mafbase_stream/android/src/main/res/xml/: mafbase_stream_file_paths.xml
mafbase_stream/android/src/test/kotlin/com/example/mafbase_stream/: MafbaseStreamPluginTest.kt
mafbase_stream/dev/: docker-compose.yml  nginx.conf
mafbase_stream/docs/: 00_index.md  01_setup_local_rtmp.md  02_plugin_skeleton.md  03_cpp_core_rtmp_client.md  04_android_native_camera_screen.md  05_android_video_encoder_local_mp4.md  06_android_compositor_full_rtmp.md  07_ios_native_camera_screen.md  08_ios_video_encoder_local_mp4.md  09_ios_compositor_full_rtmp.md  10_overlay_rendering_static.md  11_overlay_realtime_sync.md  12_local_recording.md  13_adaptive_bitrate_reconnect.md  14_background_streaming.md  15_stream_setup_ui.md  16_active_stream_ui.md  17_paywall_consent.md  18_analytics_polish.md  mafbase_stream_brd.md
mafbase_stream/example/: README.md  pubspec.yaml
mafbase_stream/ios/: mafbase_stream.podspec
mafbase_stream/lib/: mafbase_stream.dart  mafbase_stream_method_channel.dart  mafbase_stream_platform_interface.dart  mafbase_stream_web.dart  stream_event.dart
mafbase_stream/native/: .gitignore  CMakeLists.txt  README.md
mafbase_stream/native/include/mafbase_stream/: session.h
mafbase_stream/native/scripts/: build_ios.sh  fetch_ffmpeg_android.sh  fetch_ffmpeg_ios.sh  rebuild_ffmpeg_ios.sh  upload_ffmpeg.sh
mafbase_stream/native/src/: log.cpp  log.h  rtmp_publisher.cpp  rtmp_publisher.h  session.cpp  state_machine.cpp  state_machine.h
mafbase_stream/native/src/network/: bitrate_controller.cpp  bitrate_controller.h  packet_queue.cpp  packet_queue.h  writer_thread.cpp  writer_thread.h
mafbase_stream/native/src/session/: reconnect_policy.cpp  reconnect_policy.h
mafbase_stream/native/tests/: test_bitrate_controller.cpp  test_interrupt_callback.cpp  test_packet_queue.cpp  test_rtmp_publish.cpp
mafbase_stream/test/: mafbase_stream_method_channel_test.dart  mafbase_stream_test.dart
test/: get_it_register.dart  util_test.dart
test/blocs/: login_bloc_test.dart  main_bloc_test.dart  sign_up_bloc_test.dart  tournaments_bloc_test.dart  verification_bloc_test.dart
test/golden/: golden_path.dart  golden_utils.dart  player_stats_page_golden_test.dart  profile_page_golden_test.dart  profile_player_card_golden_test.dart  streams_page_golden_test.dart  translation_control_page_golden_test.dart
test/repositories/: auth_repository_mock.dart  auth_repository_mock.mocks.dart  cannot_meet_tournament_repository_mock.dart  cannot_meet_tournament_repository_mock.mocks.dart  (+5 more)
web/: flutter_bootstrap.js  index.html  manifest.json
windows/: CMakeLists.txt
(+717 files in other folders)
